--- a/index.html
+++ b/index.html
@@ -1,1 +1,85 @@
-<a href="https://llama.app.cloud.cbh.kth.se/">llama</a>
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset="utf-8" />
+    <title>AI Hub | kthcloud</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="AI tools hosted by kthcloud">
+    <meta name="keywords" content="ai tools genai kthcloud">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@100;400;700&display=swap" rel="stylesheet">
+</head>
+
+<body>
+    <h1>AI Hub</h1>
+    <p>AI tools hosted by kthcloud</p>
+
+    <main>
+        <a href="https://llama.app.cloud.cbh.kth.se/">
+            <div class="border-wrap">
+                <div class="item">
+                    <h2>Llama 2</h2>
+                    <p>Llama 2 is the open source LLM by Meta</p>
+                    <button>Visit page &gt;</button>
+                </div>
+            </div>
+        </a>
+    </main>
+
+    <style>
+        body {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            font-family: 'Public Sans', sans-serif;
+        }
+
+        main {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            flex-wrap: wrap;
+            gap: 3rem;
+            margin: 3rem;
+        }
+
+        @media screen and (max-width: 600px) {
+            main {
+                flex-direction: column;
+            }
+        }
+
+        button{
+            background: #fff;
+            border: 1px solid #000;
+            padding: 0.5rem 1rem;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        .item {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding: 3rem;
+            background: #fff;
+        }
+
+        a {
+            text-decoration: none;
+            color: inherit;
+        }
+
+        .border-wrap {
+            max-width: 250px;
+            padding: 1rem;
+            position: relative;
+            background: linear-gradient(to right, #008fe0, #00cde9);
+            padding: 3px;
+        }
+    </style>
+</body>
+
+</html>
