--- a/index.html
+++ b/index.html
@@ -21,11 +21,31 @@
             <div class="border-wrap">
                 <div class="item">
                     <h2>Llama 2</h2>
-                    <p>Llama 2 is the open source LLM by Meta</p>
+                    <p>Llama 2 is the open source LLM (Large Language Model) by Meta</p>
                     <button>Visit page &gt;</button>
                 </div>
             </div>
         </a>
+
+
+        <div class="border-wrap">
+            <div class="item">
+                <h2>Stable Diffusion</h2>
+                <p>Stable Diffusion is the open source image generation model by Stability AI</p>
+                <form action="https://sd0.vm-app.cloud.cbh.kth.se/generate" method="get">
+                    <div>
+                        <label for="prompt">Enter your prompt:</label>
+                        <input type="text" id="prompt" name="prompt" required>
+                    </div>
+                    <div>
+                        <button type="submit">Generate</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+
+
+
     </main>
 
     <style>
@@ -51,7 +71,7 @@
             }
         }
 
-        button{
+        button {
             background: #fff;
             border: 1px solid #000;
             padding: 0.5rem 1rem;
@@ -63,8 +83,20 @@
             display: flex;
             flex-direction: column;
             align-items: center;
+            gap: 1rem;
             padding: 3rem;
-            background: #fff;
+            background: rgba(255,255,255,0.8);
+            backdrop-filter: blur(500px);
+            min-height: 500px;
+            min-width: 300px;
+        }
+
+        form {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 1rem;
+
         }
 
         a {
@@ -73,11 +105,10 @@
         }
 
         .border-wrap {
-            max-width: 250px;
             padding: 1rem;
             position: relative;
             background: linear-gradient(to right, #008fe0, #00cde9);
-            padding: 3px;
+            padding: 1rem;
         }
     </style>
 </body>
