--- a/index.html
+++ b/index.html
@@ -10,45 +10,121 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@100;400;700&display=swap" rel="stylesheet">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://unpkg.com/htmx.org@1.9.8"
+        integrity="sha384-rgjA7mptc2ETQqXoYC3/zJvkU7K/aP44Y+z7xQuJiVnB/422P/Ak+F/AqFR7E4Wr"
+        crossorigin="anonymous"></script>
+    <script src="/completion.js"></script>
 </head>
 
 <body>
-    <h1>AI Hub</h1>
-    <p>AI tools hosted by kthcloud</p>
-
+    <h1 class="text-3xl font-bold tracking-tight md:text-4xl lg:text-5xl text-center mb-1 md:mb-2 lg:mb-3 mt-20">AI Hub
+    </h1>
+    <h2 class="text-xl font-semibold tracking-tight md:text-2xl lg:text-3xl text-center md:mb-1 lg:mb-10">
+        By kthcloud
+    </h2>
     <main>
-        <a href="https://llama.app.cloud.cbh.kth.se/">
-            <div class="border-wrap">
-                <div class="item">
-                    <h2>Llama 2</h2>
-                    <p>Llama 2 is the open source LLM (Large Language Model) by Meta</p>
-                    <button>Visit page &gt;</button>
+        <div class="flex flex-col p-4 md:p-6 lg:p-8 gap-6 md:gap-8 lg:gap-10">
+            <div class="grid md:grid-cols-2 gap-6 md:gap-8 lg:gap-10 w-full">
+                <div class="border border-zinc-200 p-4 rounded-lg dark:border-zinc-800">
+                    <div class="flex justify-center items-center flex-col h-full">
+                        <h2 class="text-2xl font-bold tracking-tight md:text-3xl lg:text-4xl mb-4 text-center">
+                            Llama Large Language Model
+                        </h2>
+                        <p id="llama-text" class="m-5"></p>
+                        <div class="h-full flex justify-center items-center">
+                            <button
+                                class="inline-flex items-center justify-center rounded-md font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-black hover:bg-black/70 h-15 px-4 py-2 text-lg text-blue-500 hover:text-blue-700 dark:text-blue-300 dark:hover:text-blue-200">
+                                <a href="https://llama.app.cloud.cbh.kth.se" target=”_blank”>
+                                    Try llama!
+                                </a>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="border border-zinc-200 p-4 rounded-lg dark:border-zinc-800">
+                    <h2 class="text-2xl font-bold tracking-tight md:text-3xl lg:text-4xl mb-4 text-center">
+                        Stable Diffusion Image Generator
+                    </h2>
+                    <div class="grid gap-2 md:gap-4 lg:gap-6">
+                        <label
+                            class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
+                            for="prompt-input">
+                            Enter your prompt:
+                        </label>
+                        <input
+                            class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
+                            id="prompt" placeholder="Type your prompt here..." type="text" />
+                        <button id="generate"
+                            class="inline-flex items-center justify-center rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-4 py-2"
+                            type="submit">
+                            Generate Image
+                        </button>
+                    </div>
+                    <div
+                        class="flex justify-center items-center border border-zinc-200 p-4 rounded-lg dark:border-zinc-800 mt-4">
+                        <div id="image-container">
+                            <img id="generated-image" src="/placeholder.svg" alt="Generated Image" width="500"
+                                height="500" class="object-cover" style="aspect-ratio: 500 / 500; object-fit: cover;"
+                                onload="imageLoaded(this)" />
+                        </div>
+                    </div>
                 </div>
             </div>
-        </a>
-
-
-        <div class="border-wrap">
-            <div class="item">
-                <h2>Stable Diffusion</h2>
-                <p>Stable Diffusion is the open source image generation model by Stability AI</p>
-                <form action="https://sd0.vm-app.cloud.cbh.kth.se/generate" method="get">
-                    <div>
-                        <label for="prompt">Enter your prompt:</label>
-                        <input type="text" id="prompt" name="prompt" required>
-                    </div>
-                    <div>
-                        <button type="submit">Generate</button>
-                    </div>
-                </form>
-            </div>
         </div>
-
-
-
     </main>
 
+    <script>
+        document.querySelector('#generate').addEventListener('click', () => {
+            const imageContainer = document.querySelector('#image-container');
+            imageContainer.classList.add('loader');
+            const image = document.querySelector('#generated-image');
+            image.style.opacity = 0;
+            const prompt = document.querySelector('#prompt').value;
+            const encodedPrompt = encodeURIComponent(prompt);
+            image.src = `https://sd0.vm-app.cloud.cbh.kth.se/generate?prompt=${encodedPrompt}`;
+        });
+
+        function imageLoaded(img) {
+            const imageContainer = document.querySelector('#image-container');
+            imageContainer.classList.remove('loader');
+            const image = document.querySelector('#generated-image');
+            image.style.opacity = 1;
+        }
+
+        const llamaText = document.querySelector('#llama-text');
+        async function queryLlama() {
+            const prompt = `User: Explain something about large language models (LLMs).  Answer in three sentences. Llama2: `
+            const params = {
+                temperature: Math.random() * (1 - 0.1) + 0.1,
+            }
+            for await (const chunk of llama(prompt)) {
+                llamaText.innerHTML += (chunk.data.content)
+            }
+        }
+        queryLlama();
+    </script>
+
     <style>
+
+        .loader {
+            border: 16px solid #f3f3f3;
+            border-top: 16px solid #3498db;
+            border-radius: 50%;
+            /* width: 90%; */
+            animation: spin 0.5s linear infinite;
+        }
+
+        @keyframes spin {
+            0% {
+                transform: rotate(0deg);
+            }
+
+            100% {
+                transform: rotate(360deg);
+            }
+        }
+
         body {
             display: flex;
             flex-direction: column;
@@ -85,7 +161,7 @@
             align-items: center;
             gap: 1rem;
             padding: 3rem;
-            background: rgba(255,255,255,0.8);
+            background: rgba(255, 255, 255, 0.8);
             backdrop-filter: blur(500px);
             min-height: 500px;
             min-width: 300px;
