--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 <body>
     <h1 class="text-3xl font-bold tracking-tight md:text-4xl lg:text-5xl text-center mb-1 md:mb-2 lg:mb-3 mt-20">AI Hub
     </h1>
-    <h2 class="text-xl font-semibold tracking-tight md:text-2xl lg:text-3xl text-center md:mb-1 lg:mb-10">
-        By kthcloud
+    <h2 class="text-xl font-semibold tracking-tight md:text-2xl lg:text-2xl text-center md:mb-1 lg:mb-10">
+        Free and open-source AI tools hosted by kthcloud
     </h2>
     <main>
         <div class="flex flex-col p-4 md:p-6 lg:p-8 gap-6 md:gap-8 lg:gap-10">
