--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
                 <div class="border border-zinc-200 p-4 rounded-lg dark:border-zinc-800">
                     <div class="flex justify-center items-center flex-col h-full">
                         <h2 class="text-2xl font-bold tracking-tight md:text-3xl lg:text-4xl mb-4 text-center">
-                            Llama Large Language Model
+                            Llama 2
+                        </h2>
+                        <h2 class="text-xl font-bold tracking-tight md:text-2xl lg:text-3xl mb-4 text-center">
+                            Large Language Model
                         </h2>
                         <p id="llama-text" class="m-5"></p>
                         <div class="h-full flex justify-center items-center">
@@ -44,7 +47,10 @@
                 </div>
                 <div class="border border-zinc-200 p-4 rounded-lg dark:border-zinc-800">
                     <h2 class="text-2xl font-bold tracking-tight md:text-3xl lg:text-4xl mb-4 text-center">
-                        Stable Diffusion Image Generator
+                        Stable Diffusion
+                    </h2>
+                    <h2 class="text-xl font-bold tracking-tight md:text-2xl lg:text-3xl mb-4 text-center">
+                        Image Generator
                     </h2>
                     <div class="grid gap-2 md:gap-4 lg:gap-6">
                         <label
@@ -106,7 +112,6 @@
     </script>
 
     <style>
-
         .loader {
             border: 16px solid #f3f3f3;
             border-top: 16px solid #3498db;
