--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <h2 class="text-xl font-bold tracking-tight md:text-2xl lg:text-3xl mb-4 text-center">
                             Large Language Model
                         </h2>
-                        <p id="llama-text" class="m-5"></p>
+                        <p  class="m-5">🦙 Llama 2: <span id="llama-text"></span></p>
                         <div class="h-full flex justify-center items-center">
                             <button
                                 class="inline-flex items-center justify-center rounded-md font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-black hover:bg-black/70 h-15 px-4 py-2 text-lg text-blue-500 hover:text-blue-700 dark:text-blue-300 dark:hover:text-blue-200">
